@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,15 +23,16 @@ import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Map;
 
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletResponse;
-
 import freemarker.template.Configuration;
 import freemarker.template.SimpleHash;
 import freemarker.template.Template;
 import freemarker.template.TemplateException;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletResponse;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.DisabledForJreRange;
+import org.junit.jupiter.api.condition.JRE;
 
 import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.core.io.ClassPathResource;
@@ -49,7 +50,6 @@ import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
 import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
 import org.springframework.web.testfixture.servlet.MockServletContext;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
 
 /**
@@ -58,6 +58,7 @@ import static org.assertj.core.api.Assertions.assertThat;
  * @author Sam Brannen
  * @since 25.01.2005
  */
+@SuppressWarnings("deprecation")
 public class FreeMarkerMacroTests {
 
 	private static final String TEMPLATE_FILE = "test.ftl";
@@ -80,7 +81,6 @@ public class FreeMarkerMacroTests {
 		this.templateLoaderPath = Files.createTempDirectory("servlet-").toAbsolutePath();
 
 		fc.setTemplateLoaderPaths("classpath:/", "file://" + this.templateLoaderPath);
-		fc.setServletContext(servletContext);
 		fc.afterPropertiesSet();
 
 		wac.setServletContext(servletContext);
@@ -147,6 +147,7 @@ public class FreeMarkerMacroTests {
 	}
 
 	@Test
+	@DisabledForJreRange(min = JRE.JAVA_21)
 	public void testAge() throws Exception {
 		assertThat(getMacroOutput("AGE")).isEqualTo("99");
 	}
@@ -251,17 +252,19 @@ public class FreeMarkerMacroTests {
 	@Test
 	public void testForm15() throws Exception {
 		String output = getMacroOutput("FORM15");
-		assertThat(output.startsWith("<input type=\"hidden\" name=\"_name\" value=\"on\"/>")).as("Wrong output: " + output).isTrue();
-		assertThat(output.contains("<input type=\"checkbox\" id=\"name\" name=\"name\" />")).as("Wrong output: " + output).isTrue();
+		assertThat(output).as("Wrong output: " + output)
+				.startsWith("<input type=\"hidden\" name=\"_name\" value=\"on\"/>");
+		assertThat(output).as("Wrong output: " + output)
+				.contains("<input type=\"checkbox\" id=\"name\" name=\"name\" />");
 	}
 
 	@Test
 	public void testForm16() throws Exception {
 		String output = getMacroOutput("FORM16");
-		assertThat(output.startsWith(
-				"<input type=\"hidden\" name=\"_jedi\" value=\"on\"/>")).as("Wrong output: " + output).isTrue();
-		assertThat(output.contains(
-				"<input type=\"checkbox\" id=\"jedi\" name=\"jedi\" checked=\"checked\" />")).as("Wrong output: " + output).isTrue();
+		assertThat(output).as("Wrong output: " + output)
+				.startsWith("<input type=\"hidden\" name=\"_jedi\" value=\"on\"/>");
+		assertThat(output).as("Wrong output: " + output)
+				.contains("<input type=\"checkbox\" id=\"jedi\" name=\"jedi\" checked=\"checked\" />");
 	}
 
 	@Test
@@ -272,10 +275,10 @@ public class FreeMarkerMacroTests {
 	@Test
 	public void testForm18() throws Exception {
 		String output = getMacroOutput("FORM18");
-		assertThat(output.startsWith(
-				"<input type=\"hidden\" name=\"_spouses[0].jedi\" value=\"on\"/>")).as("Wrong output: " + output).isTrue();
-		assertThat(output.contains(
-				"<input type=\"checkbox\" id=\"spouses0.jedi\" name=\"spouses[0].jedi\" checked=\"checked\" />")).as("Wrong output: " + output).isTrue();
+		assertThat(output).as("Wrong output: " + output)
+				.startsWith("<input type=\"hidden\" name=\"_spouses[0].jedi\" value=\"on\"/>");
+		assertThat(output).as("Wrong output: " + output)
+				.contains("<input type=\"checkbox\" id=\"spouses0.jedi\" name=\"spouses[0].jedi\" checked=\"checked\" />");
 	}
 
 
@@ -347,8 +350,9 @@ public class FreeMarkerMacroTests {
 	}
 
 	private void storeTemplateInTempDir(String macro) throws IOException {
-		Files.write(this.templateLoaderPath.resolve("tmp.ftl"),
-				("<#import \"spring.ftl\" as spring />\n" + macro).getBytes(UTF_8));
+		Files.writeString(this.templateLoaderPath.resolve("tmp.ftl"),
+				"<#import \"spring.ftl\" as spring />\n" + macro
+		);
 	}
 
 	private String getOutput() throws IOException {
